# church

./: .gitignore  README.md  build.sbt  church.cabal  test
haskell/church/: LICENSE  README.md  church.cabal
haskell/church/diagr-generics/: Gencs.hs
haskell/church/generics-side/: Treeish.hs  gnomes.hs
haskell/church/lambda/: Grammar.hs  logic.hs
haskell/church/lambda/Grammar/: DSL.hs
haskell/church/test/: doctests.hs
haskellold/: church._cabal
scala/src/main/scala/: Lambda.scala  lambda judgements.sc
src/main/haskell/: logic.hs
src/main/scala/: Church.scala  Lambda.scala
