name:                church
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/church#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable church
  hs-source-dirs:      src/main/haskell
  main-is:             logic.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
