name:                church
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pedrofurla/church#readme
license:             BSD3
license-file:        LICENSE
author:              Pedro Furlanetto
maintainer:          pedrofurla@gmail.com
copyright:           Pedro Furlanetto
category:            no-category
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- test-suite church-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , church
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctests.hs
  build-depends:       base
                     , church
                     , doctest >= 0.8
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  
library
   hs-source-dirs:      lambda
   exposed-modules:     Grammar, Grammar.DSL
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5


--source-repository head
--  type:     git
--  location: https://github.com/pedrofurla/church


-- executable diagr
--    hs-source-dirs:      generic-side
--    main-is:             treeish.hs
--    default-language:    Haskell2010
--    build-depends:       base >= 4.7 && < 5,
--                         diagrams-contrib,
--                         diagrams-svg, 
--                         diagrams-lib,
--                         containers,
--                         graphviz,
--                         generic-deriving
